[package]
name = "serveit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
clap = "3.0.0-beta.2"
webbrowser = "0.6"
urlencoding = "1.1.1" 
